--- a/reactJS-practice/forms-pract-adv/index.html
+++ b/reactJS-practice/forms-pract-adv/index.html
@@ -103,32 +103,32 @@
     // Дан также абзац, в который выводится выбранный город. Сделайте так, чтобы при смене города в
     // селекте в абзаце он также менялся.
     //
-   /* class App extends React.Component {
-        constructor() {
-            super();
-            this.state = {
-                option: 'Город 1'
-            };
-        }
+    /* class App extends React.Component {
+         constructor() {
+             super();
+             this.state = {
+                 option: 'Город 1'
+             };
+         }
 
-        handleSelect (event){
-            this.setState({option: event.target.value})
-        }
+         handleSelect (event){
+             this.setState({option: event.target.value})
+         }
 
-        render() {
-            return(
-                <div>
-                    <select onChange={this.handleSelect.bind(this)}>
-                        <option>Город 1</option>
-                        <option>Город 2</option>
-                        <option>Город 3</option>
-                        <option>Город 4</option>
-                    </select>
-                    <p>{this.state.option}</p>
-                </div>
-            )
-        }
-    }*/
+         render() {
+             return(
+                 <div>
+                     <select onChange={this.handleSelect.bind(this)}>
+                         <option>Город 1</option>
+                         <option>Город 2</option>
+                         <option>Город 3</option>
+                         <option>Город 4</option>
+                     </select>
+                     <p>{this.state.option}</p>
+                 </div>
+             )
+         }
+     }*/
 
     //     Модифицируйте предыдущую задачу так, чтобы список городов хранился в массиве из стейта.
     //
@@ -169,6 +169,29 @@
     // Даны 3 радиокнопочки со значениями 1, 2 и 3. Дан абзац. Сделайте так, чтобы значение выбранной
     // радиокнопочки выводилось в этот абзац.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                option: ''
+            }
+        }
+
+        handleRadio(event) {
+            this.setState({option: event.target.value});
+        }
+
+        render() {
+            return (
+                <div>
+                    <input name="num" type="radio" value="1" onChange={this.handleRadio.bind(this)}/>1
+                    <input name="num" type="radio" value="2" onChange={this.handleRadio.bind(this)} />2
+                    <input name="num" type="radio" value="3" onChange={this.handleRadio.bind(this)}/>3
+                    <p>{this.state.option}</p>
+                </div>
+            )
+        }
+    }*/
 
 
     //     Практика
@@ -177,25 +200,264 @@
     // но каждый раз по нажатию на кнопку в конец этого массива должно записаться текущее содержимое текстареа.
     // Выведите содержимое массива this.state.texts так, чтобы каждый элемент массива выводился в новом абзаце.
     //
-    //     Дан селект со списком CSS цветов. Дан абзац. Сделайте так, чтобы при смене цвета абзац красился в выбранный
+    /* class App extends React.Component {
+         constructor() {
+             super();
+             this.state = {
+                 texts: [],
+                 value: ''
+             };
+         }
+
+         addText(event) {
+             this.state.texts.push(this.state.value);
+             this.setState({texts: this.state.texts});
+             event.preventDefault();
+         }
+
+         textareaHandler(event) {
+             this.setState({value: event.target.value});
+
+         }
+
+         render() {
+             const list = this.state.texts.map((item, index) => {
+                 return <p key={index}>{item}</p>
+             });
+             return (
+                 <div>
+                     <form onSubmit={this.addText.bind(this)}>
+                         <textarea onChange={this.textareaHandler.bind(this)}/><br/>
+                         <input type="submit"/>
+                     </form>
+                     <div>{list}</div>
+                 </div>
+             )
+         }
+     }
+ */
+
+    //     Дан селект со списком CSS цветов. Дан абзац.
+    //     Сделайте так, чтобы при смене цвета абзац красился в выбранный
     //     цвет.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                options: ['red', 'green', 'blue'],
+                colors: ['red', 'green', 'blue'],
+                value: 0
+
+            }
+        }
+
+        selectHandler(event) {
+            this.setState({value: event.target.value});
+        }
+
+        render() {
+            const options = this.state.options.map((item, index) => {
+                return <option key={index} value={index}>{item}</option>
+            })
+            var col = 'red';
+            return (
+                <div>
+                    <select onChange={this.selectHandler.bind(this)}>{options}</select>
+                    <p style={{color: this.state.colors[this.state.value]}}>ффф</p>
+                </div>
+            )
+        }
+    }*/
+
     //     Дан селект с двумя значениями: 'отмечено' и 'не отмечено'. Дан также чекбокс.
     //     Сделайте так, чтобы при изменении значения селекта, чекбокс менял свое состояние с 'отмечено' на
     //     'не отмечено' и наоброт.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                options: ['отмечено', 'не отмечено'],
+                value: '0'
+            }
+
+        }
+
+        selectHandler(event) {
+            this.setState({value: event.target.value});
+        }
+
+        render() {
+            const options = this.state.options.map((item, index) => {
+                return <option key={index} value={index}>{item}</option>
+            })
+            return (
+                <div>
+                    <select onChange={this.selectHandler.bind(this)}>{options}</select>
+                    <input type="checkbox" readOnly checked={this.state.value == 0 ? true : false} />
+                </div>
+            )
+        }
+    }*/
+
     //     Дан селект и 3 абзаца. В селекте можно выбрать один из трех пунктов.
     //     Сделайте так, чтобы в зависимости от выбора на экране был виден один из трех абзацев.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                options: ['1', '2', '3'],
+                paragraphs: ['par1', 'par2', 'par3'],
+                value: '0'
+            }
+        }
+
+        selectHandler(event) {
+            this.setState({value: event.target.value});
+        }
+
+        render() {
+            const options = this.state.options.map((item, index) => {
+                return <option key={index} value={index}>{item}</option>
+            });
+            return (
+                <div>
+                    <select onChange={this.selectHandler.bind(this)}>
+                        {options}
+                    </select>
+                    <p>{this.state.paragraphs[this.state.value]}</p>
+                </div>
+            )
+        }
+
+    }*/
+
     //     Дан инпут, кнопка и селект. Сделайте следующее: в инпут вводится какая-то строка и по нажатию на кнопку
     //     эта строка должна добавится в конец селекта в виде нового option.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {
+                options: ['opt1', 'opt2', 'opt3'],
+                value: ''
+            }
+        }
+
+        inputHandler(event) {
+            this.setState({value: event.target.value});
+            console.log(this.state.value);
+        }
+
+        addOption(event) {
+            console.log(this.state.value);
+            this.state.options.push(this.state.value);
+            this.setState({options: this.state.options});
+            event.preventDefault();
+        }
+
+        render() {
+            const options = this.state.options.map((item, index) => {
+                return <option key={index} value={item}>{item}</option>
+            });
+            return (
+                <div>
+                    <select >{options}</select>
+                    <form onSubmit={this.addOption.bind(this)}>
+                        <input onChange={this.inputHandler.bind(this)}/>
+                        <input  type="submit"/>
+
+                    </form>
+                </div>
+            )
+        }
+    }*/
+
     //     Дан чекбокс и инпут. Сделайте так, чтобы если чекбокс не отмечен -
     //     то инпут находится в заблокированном состоянии (через disabled, а если отмечен - то в незаблокированном.
     //
+    /*class App extends React.Component {
+        constructor() {
+            super();
+            this.state = {checked: true}
+        }
+
+        checkboxHandler(event) {
+            this.setState({checked: !this.state.checked});
+        }
+
+        render() {
+            return (
+                <div>
+                    <input disabled={this.state.checked ? false : true}/>
+                    <input type="checkbox" defaultChecked={this.state.checked} onChange={this.checkboxHandler.bind(this)}/>
+                </div>
+            )
+        }
+    }
+*/
+
     //     Даны 3 селекта. В первом можно выбрать день, во втором месяц,
     //     а в третьем год. Дан абзац. Сделайте так, чтобы в этот абзац вывелся день недели за выбранную дату.
     //     Пусть по умолчанию в селекте отображается текущая дата.
+    class App extends React.Component {
+        constructor(){
+            super();
+            this.state = {
+                months: [
+                    'январь',
+                    'февраль',
+                    'март',
+                    'апрель',
+                    'май',
+                    'июнь',
+                    'июль',
+                    'август',
+                    'сентябрь',
+                    'октябрь',
+                    'ноябрь',
+                    'декабрь'
+                ],
+                days: [
+                    'понедельник',
+                    'вторник',
+                    'среда',
+                    'четверг',
+                    'пятница',
+                    'суббота',
+                    'воскресенье'
+                ],
+                todayDate: new Date()
+            }
+        }
+        getYears(){
+            let years = [];
+            for (let i = this.state.todayDate.getFullYear()-10; i <= this.state.todayDate.getFullYear(); i++) {
+                years.push(i);
+            }
+            return years;
+        }
+        render() {
+            const year = this.getYears().reverse().map((item, index) => {
+                if (index == this.state.todayDate.getMonth()){
+                    var marker = selected;
+                } else {
+                }
+                return <option key={index} value={index}>{item}</option>
+            });
+            const month = this.state.months.map((item, index) => {
+                return <option key={index} value={index} selected={index == this.state.todayDate.getMonth() ? true : false}>{item}</option>
+            })
+            return(
+                <div>
+                    <select>{year}</select>
+                    <select>{month}</select>
+                </div>
+            )
+        }
+    }
 
     // Практика по работе с формами в фреймворке React
 
